tests/reject/tnamedparams.nim
import pegs

discard parsePeg(
      input = "input", 
      filename = "filename", 
      line = 1, 
      col = 23)

